--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "antd-mobile": "^2.3.3",
     "axios": "^0.20.0",
     "fastclick": "^1.0.6",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "swiper": "^6.2.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
