--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "antd-mobile": "^2.3.3",
     "axios": "^0.20.0",
+    "better-scroll": "^2.0.3",
     "fastclick": "^1.0.6",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
