--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "better-scroll": "^2.0.3",
     "fastclick": "^1.0.6",
     "node-sass": "^4.14.1",
+    "pubsub-js": "^1.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
