--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fastclick": "^1.0.6",
     "node-sass": "^4.14.1",
     "pubsub-js": "^1.9.0",
+    "rc-form": "^2.4.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
